# dali-toolkit

./: .gitignore  CMakeLists.txt  README  README.md  project.config
automated-tests/src/dali-scene-loader-internal/: CMakeLists.txt  tct-dali-scene-loader-internal-core.cpp  utc-Dali-Gltf2Asset.cpp  utc-Dali-Hash.cpp  utc-Dali-JsonReader.cpp  utc-Dali-JsonUtil.cpp
automated-tests/src/dali-scene3d/: CMakeLists.txt  collider-mesh-data.h  tct-dali-scene3d-core.cpp  utc-Dali-AlphaFunctionHelper.cpp  utc-Dali-AnimatedProperty.cpp  utc-Dali-AnimationDefinition.cpp  utc-Dali-BlendShapeIndex.cpp  utc-Dali-BvhLoader.cpp  utc-Dali-CameraParameters.cpp  utc-Dali-CubeLoader.cpp  utc-Dali-CubeMapLoader.cpp  utc-Dali-DliLoader.cpp  utc-Dali-EnvironmentDefinition.cpp  utc-Dali-EnvironmentMapLoader.cpp  utc-Dali-FacialAnimation.cpp  utc-Dali-Gltf2Loader.cpp  utc-Dali-KtxLoader.cpp  utc-Dali-Light.cpp  utc-Dali-Material.cpp  utc-Dali-MatrixStack.cpp  utc-Dali-MeshDefinition.cpp  utc-Dali-Model.cpp  utc-Dali-ModelNode.cpp  utc-Dali-ModelPrimitive.cpp  utc-Dali-ModelView.cpp  utc-Dali-MotionData.cpp  utc-Dali-MotionIndex.cpp  utc-Dali-MotionPropertyIndex.cpp  utc-Dali-MotionTransformIndex.cpp  utc-Dali-MotionValue.cpp  utc-Dali-NavigationMesh.cpp  utc-Dali-NodeDefinition.cpp  utc-Dali-Panel.cpp  utc-Dali-PathFinding.cpp  utc-Dali-RendererState.cpp  utc-Dali-ResourceBundle.cpp  utc-Dali-SceneDefinition.cpp  utc-Dali-SceneView.cpp  utc-Dali-ShaderDefinition.cpp  utc-Dali-ShaderDefinitionFactory.cpp  (+6 more)
automated-tests/src/dali-shader-generator/: CMakeLists.txt  tct-dali-shader-generator-core.cpp  utc-Dali-ShaderGenerator.cpp
automated-tests/src/dali-toolkit/: CMakeLists.txt  custom-layout-impl.cpp  custom-layout-impl.h  custom-layout.cpp  custom-layout.h  tct-dali-toolkit-core.cpp  tct-dali-toolkit-core.h  test-text-geometry-utils.cpp  test-text-geometry-utils.h  toolkit-direct-rendering-egl.cpp  utc-Dali-AbsoluteLayout.cpp  utc-Dali-AccessibilityFocusManager.cpp  utc-Dali-AccessibilityManager.cpp  utc-Dali-Alignment.cpp  utc-Dali-AnimatedImageVisual.cpp  utc-Dali-AnimatedVectorImageVisual.cpp  utc-Dali-ArcVisual.cpp  utc-Dali-AsyncImageLoader.cpp  utc-Dali-BendyEffect.cpp  utc-Dali-BinLayout.cpp  utc-Dali-BlindEffect.cpp  utc-Dali-BloomView.cpp  utc-Dali-BubbleEmitter.cpp  utc-Dali-Builder.cpp  utc-Dali-Button.cpp  utc-Dali-CameraView.cpp  utc-Dali-CanvasView.cpp  utc-Dali-CarouselEffect.cpp  utc-Dali-CheckBoxButton.cpp  utc-Dali-Cluster.cpp  utc-Dali-ConfirmationPopup.cpp  utc-Dali-Control.cpp  utc-Dali-ControlImpl.cpp  utc-Dali-ControlRenderer.cpp  utc-Dali-ControlRenderers.cpp  utc-Dali-ControlWrapper.cpp  utc-Dali-CubeTransitionEffect.cpp  utc-Dali-DebugRenderer.cpp  utc-Dali-DebugRendering.cpp  utc-Dali-DebugVisual.cpp  (+113 more)
automated-tests/src/dali-toolkit-internal/: CMakeLists.txt  tct-dali-toolkit-internal-core.cpp  tct-dali-toolkit-internal-core.h  utc-Dali-Accessibility-Accessible.cpp  utc-Dali-Accessibility-Controls-BridgeUp.cpp  utc-Dali-Accessibility-Controls.cpp  utc-Dali-Accessibility-Highlight-Overlay.cpp  utc-Dali-Accessibility-Text.cpp  utc-Dali-Accessibility-Value.cpp  utc-Dali-AddOns.cpp  utc-Dali-BidirectionalSupport.cpp  utc-Dali-BoundedParagraph-Functions.cpp  utc-Dali-ColorConversion.cpp  utc-Dali-Control-internal.cpp  utc-Dali-DebugRendering.cpp  utc-Dali-Dictionary.cpp  utc-Dali-FeedbackStyle.cpp  utc-Dali-ImageView-internal.cpp  utc-Dali-ImageVisualShaderFeatureBuilder.cpp  utc-Dali-ItemView-internal.cpp  utc-Dali-LineHelperFunctions.cpp  utc-Dali-LogicalModel.cpp  utc-Dali-PropertyHelper.cpp  utc-Dali-PushButton.cpp  utc-Dali-RenderEffect-internal.cpp  utc-Dali-SizeNegotiationMapper.cpp  utc-Dali-SvgLoader.cpp  utc-Dali-Text-AbstractStyleCharacterRun.cpp  utc-Dali-Text-CharacterSetConversion.cpp  utc-Dali-Text-CharacterSpacing.cpp  utc-Dali-Text-Characters.cpp  utc-Dali-Text-Circular.cpp  utc-Dali-Text-Controller.cpp  utc-Dali-Text-Cursor.cpp  utc-Dali-Text-Ellipsis.cpp  utc-Dali-Text-Hyphen-Wrapping.cpp  utc-Dali-Text-Layout.cpp  utc-Dali-Text-Markup.cpp  utc-Dali-Text-MultiLanguage.cpp  utc-Dali-Text-Segmentation.cpp  (+19 more)
automated-tests/src/dali-toolkit-styling/: CMakeLists.txt  default-theme.json  tct-dali-toolkit-styling-core.cpp  theme2.json  theme3.json  utc-Dali-DefaultTheme.cpp  utc-Dali-StyleManager.cpp
automated-tests/src/dali-toolkit-third-party/: CMakeLists.txt  tct-dali-toolkit-third-party-core.cpp  utc-Dali-Flexbox-Layout.cpp
automated-tests/src/dali-toolkit-unmanaged/: CMakeLists.txt  tct-dali-toolkit-unmanaged-core.cpp  tct-dali-toolkit-unmanaged-core.h  utc-Dali-AlbumLayout.cpp  utc-Dali-BendyEffect.cpp  utc-Dali-BlindEffect.cpp  utc-Dali-BloomView.cpp  utc-Dali-Builder.cpp  utc-Dali-Button.cpp  utc-Dali-CarouselEffect.cpp  utc-Dali-CheckBoxButton.cpp  utc-Dali-Cluster.cpp  utc-Dali-ControlImpl.cpp  utc-Dali-CubeTransitionEffect.cpp  utc-Dali-DefaultControls.cpp  utc-Dali-DepthLayout.cpp  utc-Dali-DisplacementEffect.cpp  utc-Dali-DistanceFieldEffect.cpp  utc-Dali-GaussianBlurView.cpp  utc-Dali-ItemView.cpp  utc-Dali-JsonParser.cpp  utc-Dali-KeyInputFocusManager.cpp  utc-Dali-KeyboardFocusManager.cpp  utc-Dali-NavigationControl.cpp  utc-Dali-NavigationLayout.cpp  utc-Dali-OverlayEffect.cpp  utc-Dali-Page.cpp  utc-Dali-PageTurnEffect.cpp  utc-Dali-PageTurnView.cpp  utc-Dali-RadioButton.cpp  utc-Dali-RollLayout.cpp  utc-Dali-RotatingSelector.cpp  utc-Dali-ScrollView.cpp  utc-Dali-ScrollViewEffect.cpp  utc-Dali-ShadowView.cpp  utc-Dali-ShearEffect.cpp  utc-Dali-Slider.cpp  utc-Dali-SoftButtonEffect.cpp  utc-Dali-SpiralLayout.cpp  utc-Dali-SpotEffect.cpp  (+7 more)
docs/content/example-code/: .gitignore  CMakeLists.txt  properties.cpp  property-example.cpp
plugins/dali-swig/: .gitignore  Makefile.am  README  configure.ac  constructor-generator.rb  property-wrapper.rb  swig.cmd
plugins/dali-swig/SWIG/: alphafunction.i  cameraActor.i  dali-adaptor.i  dali-core.i  dali-gc.i  dali-operator.i  dali-toolkit.i  dali.i  devel-properties.i  flexContainer.i  imageView.i  layer.i  linearConstrainer.i  model3DView.i  name-changed.i  pageTurnLandscapeView.i  pageTurnPortraitView.i  (+13 more)
(+4625 files in other folders)
